fixed z-index nav menu bug

--- a/src/pages/my-reports/my-reports.css
+++ b/src/pages/my-reports/my-reports.css
@@ -3,6 +3,8 @@
     min-height: 100vh;
     height: auto;
     padding: 40px 0 20px 0;
+    z-index: -1;
+    position: relative;
 }
 
 .content {
